lesson-06/instances/main.tf
resource "aws_instance" "lesson_06" {
  ami           = "ami-097a2df4ac947655f"
  instance_type = "t2.micro"
  key_name      = "aws_key"
  vpc_security_group_ids = [
    aws_security_group.sg_ssh.id,
    aws_security_group.sg_https.id,
    aws_security_group.sg_http.id
  ]



  tags = {
    Name = "Lesson_06-Cloud-Init"
  }
}

resource "aws_key_pair" "deployer" {
  key_name   = "aws_key"
  public_key = "ssh-ed25519 AAAA-etc..."
}

resource "aws_security_group" "sg_ssh" {
  ingress {
    cidr_blocks = ["0.0.0.0/0"]
    protocol  = "tcp"
    from_port = 22
    to_port   = 22
  }

  egress {
    cidr_blocks = ["0.0.0.0/0"]
    protocol  = "-1"
    from_port = 0
    to_port   = 0
  }
}

resource "aws_security_group" "sg_https" {
  ingress {
    cidr_blocks = ["192.168.0.0/16"]
    protocol  = "tcp"
    from_port = 443
    to_port   = 443
  }

  egress {
    cidr_blocks = ["0.0.0.0/0"]
    protocol  = "-1"
    from_port = 0
    to_port   = 0
  }
}

resource "aws_security_group" "sg_http" {
  ingress {
    cidr_blocks = ["0.0.0.0/0"]
    protocol  = "tcp"
    from_port = 80
    to_port   = 80
  }

  egress {
    cidr_blocks = ["0.0.0.0/0"]
    protocol  = "-1"
    from_port = 0
    to_port   = 0
  }
}
